--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -16,3 +16,7 @@
 	padding-top: 8px;
 	text-align: center;
 }
+
+.are-images-unloaded {
+	display: none;
+}
